--- a/data/settings.json
+++ b/data/settings.json
@@ -2,14 +2,14 @@
   "favicon": "https://cdn.jsdelivr.net/gh/xjh22222228/nav@image/logo.png",
   "homeUrl": "https://nav3.cn",
   "language": "zh-CN",
-  "loading": "loading4",
+  "loading": "random",
   "showGithub": true,
   "title": "发现导航 - 精选实用导航网站",
   "description": "发现导航 - 精选实用导航网站",
   "keywords": "导航,前端资源,社区站点,设计师,实用工具,学习资源,运营,网络安全,node.js",
   "theme": "Side",
   "appTheme": "App",
-  "footerContent": "<div style=\"font-weight: bold;\">共收录${total}个网站</div><div>Copyright © 2018-2022 <a href=\"tools.qjidea.com\">tools.qjidea.com</a>, All Rights Reserved</div>",
+  "footerContent": "<div style=\"font-weight: bold;\">共收录${total}个网站</div><div>Copyright © 2018-2022 nav3.cn, All Rights Reserved</div>",
   "iconfontUrl": "",
   "baiduStatisticsUrl": "",
   "cnzzStatisticsUrl": "",
@@ -56,6 +56,6 @@
     }
   ],
   "showLanguage": false,
-  "showRate": true,
+  "showRate": false,
   "mirrorList": []
 }
