--- a/data/settings.json
+++ b/data/settings.json
@@ -9,7 +9,7 @@
   "keywords": "导航,前端资源,社区站点,设计师,实用工具,学习资源,运营,网络安全,node.js",
   "theme": "Side",
   "appTheme": "Sim",
-  "footerContent": "<div style=\\\"font-weight: bold;\\\">共收录${total}个网站</div><div>Copyright © 2018-2022 qidea.com All Rights Reserved</div>",
+  "footerContent": "<div style=\\\"font-weight: bold;\\\">共收录${total}个网站</div><div>Copyright © 2018-2023  <a href='qjidea.com'>qjidea.com</a> All Rights Reserved</div>",
   "iconfontUrl": "",
   "baiduStatisticsUrl": "",
   "cnzzStatisticsUrl": "",
