--- a/data/settings.json
+++ b/data/settings.json
@@ -1,6 +1,6 @@
 {
   "favicon": "https://cdn.jsdelivr.net/gh/xjh22222228/nav@image/logo.png",
-  "homeUrl": "https://nav3.cn",
+  "homeUrl": "https://tools.qjidea.com/",
   "language": "zh-CN",
   "loading": "loading2",
   "showGithub": true,
