--- a/data/settings.json
+++ b/data/settings.json
@@ -6,8 +6,8 @@
   "showGithub": true,
   "title": "发现导航 - 精选实用导航网站",
   "description": "发现导航 - 精选实用导航网站",
-  "keywords": "导航,前端资源,社区站点,设计师,实用工具,学习资源,运营,网络安全,node.js",
-  "theme": "Side",
+  "keywords": "导航,前端，前端资源,静言思之,社区站点,设计师,实用工具,学习资源,运营,网络安全,javascript，JS，node.js",
+  "theme": "Sim",
   "appTheme": "Sim",
   "footerContent": "<div style=\\\"font-weight: bold;\\\">共收录${total}个网站</div><div>Copyright © 2018-2023  <a href='https://qjidea.com'>qjidea.com</a> All Rights Reserved</div>",
   "iconfontUrl": "",
@@ -19,24 +19,14 @@
       "url": "",
       "width": null,
       "height": null
-    },
-    {
-      "src": "https://cdn.jsdelivr.net/gh/xjh22222228/nav@image/nav-1637490885331-ChMkKWF4tn6IeIGwAD5r3l1JSDcAAU-5QFAFu4APmv2924.jpeg",
-      "url": "",
-      "width": null,
-      "height": null
     }
+
   ],
   "simThemeDesc": "这里收录多达 <b>${total}</b> 个优质网站， 助您工作、学习和生活",
   "simThemeHeight": 350,
   "simThemeAutoplay": true,
   "sideThemeImages": [
-    {
-      "src": "https://cdn.jsdelivr.net/gh/xjh22222228/nav@image/nav-1637490885331-ChMkKWF4tn6IeIGwAD5r3l1JSDcAAU-5QFAFu4APmv2924.jpeg",
-      "url": "",
-      "width": null,
-      "height": null
-    },
+  
     {
       "src": "https://cdn.jsdelivr.net/gh/xjh22222228/nav@image/sim-wallpaper.jpg",
       "url": "",
