--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "type": "git",
     "url": "git+https://github.com/xjh22222228/nav.git"
   },
-  "homepage": "https://github.com/xjh22222228/nav",
+  "homepage": "https://tools.qjidea.com",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port=7001",
