--- a/data/settings.json
+++ b/data/settings.json
@@ -4,11 +4,11 @@
   "language": "zh-CN",
   "loading": "loading2",
   "showGithub": true,
-  "title": "发现导航 - 精选实用导航网站",
-  "description": "发现导航 - 精选实用导航网站",
+  "title": "常用网站导航",
+  "description": "常用网站导航",
   "keywords": "导航,前端，前端资源,静言思之,社区站点,设计师,实用工具,学习资源,运营,网络安全,javascript，JS，node.js",
-  "theme": "Sim",
-  "appTheme": "Sim",
+  "theme": "Side",
+  "appTheme": "App",
   "footerContent": "<div style=\\\"font-weight: bold;\\\">共收录${total}个网站</div><div>Copyright © 2018-2023  <a href='https://qjidea.com'>qjidea.com</a> All Rights Reserved</div>",
   "iconfontUrl": "",
   "baiduStatisticsUrl": "",
